@@ -1,0 +1,5 @@
+l_orderkey,cnt
+-------------------------------
+1,2
+2,1
+3,2
